Add JSF Converters & Validators

--- a/jsflab/converters-and-validators/src/main/webapp/result.xhtml
+++ b/jsflab/converters-and-validators/src/main/webapp/result.xhtml
@@ -24,6 +24,9 @@
 	    	<h:panelGroup rendered="#{not empty user.bookmarkURL}">
 	    		The user's bookmarkURL [<b>#{user.bookmarkURL}</b>] is valid !
 	    	</h:panelGroup>
+	    	<h:panelGroup rendered="#{not empty user.email}">
+	    		The user's email [<b>#{user.email}</b>] is valid !
+	    	</h:panelGroup>
     	</h:panelGroup>
     
     </h:body>
